[gd_scene load_steps=15 format=3 uid="uid://dyuhogh5sfbgn"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_ydqi1"]
[ext_resource type="Texture2D" uid="uid://bl7lon8q3ksea" path="res://assets/platformer_metroidvania asset pack v1.01/herochar sprites(new)/herochar_spritesheet(new).png" id="2_hn51d"]
[ext_resource type="AudioStream" uid="uid://c03topm2cv47c" path="res://sounds/sfx/jump/Jump 007.wav" id="3_oo4n4"]
[ext_resource type="AudioStream" uid="uid://c104ebggsqnpy" path="res://sounds/sfx/Environments and Signals/Loser.wav" id="4_8kqkg"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1171a"]
radius = 4.0
height = 16.0

[sub_resource type="Animation" id="Animation_nd0us"]
length = 0.001

[sub_resource type="Animation" id="Animation_yi53v"]
resource_name = "attack"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [32, 34, 36, 38]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("PlayerSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [33, 35, 37, 39]
}

[sub_resource type="Animation" id="Animation_g862v"]
resource_name = "die"
length = 1.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.5, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_hy20o"]
resource_name = "double_jump"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [72, 73, 74]
}

[sub_resource type="Animation" id="Animation_k4n8n"]
resource_name = "falling"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [48, 49, 50]
}

[sub_resource type="Animation" id="Animation_lf2wm"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43]
}

[sub_resource type="Animation" id="Animation_ahx5w"]
resource_name = "jump_up"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [56, 57, 58]
}

[sub_resource type="Animation" id="Animation_g7v0w"]
resource_name = "run"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [9, 10, 11, 12, 13]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_htyai"]
_data = {
"RESET": SubResource("Animation_nd0us"),
"attack": SubResource("Animation_yi53v"),
"die": SubResource("Animation_g862v"),
"double_jump": SubResource("Animation_hy20o"),
"falling": SubResource("Animation_k4n8n"),
"idle": SubResource("Animation_lf2wm"),
"jump_up": SubResource("Animation_ahx5w"),
"run": SubResource("Animation_g7v0w")
}

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_ydqi1")

[node name="PlayerSprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_hn51d")
hframes = 8
vframes = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("CapsuleShape2D_1171a")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_htyai")
}

[node name="Jump_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_oo4n4")

[node name="die_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_8kqkg")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
